--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
-  "presets": ["react", "es2015"],
+  "presets": ["react"],
+  "plugins": ["transform-es2015-modules-commonjs"],
   "env": {
     "development": {
       "presets": ["react-hmre"]
