--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-core": "^6.3.15",
     "babel-eslint": "^5.0.0-beta4",
     "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.4.5",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.0",
     "cross-env": "^1.0.6",
